[gh-9] Fixed Footer visibility

--- a/wp-content/themes/timeline.1.2/timeline-wp/style.css
+++ b/wp-content/themes/timeline.1.2/timeline-wp/style.css
@@ -2879,6 +2879,7 @@ p.comment-form-comment {
 
 /* Site Generator Line */
 #site-generator {
+	visibility: hidden;
 	border-top: 1px solid #ddd;
 	color: #94A0C1;
 	font-size: 12px;
